--- a/app/index.html
+++ b/app/index.html
@@ -69,13 +69,12 @@
 
                 // lights
 
-                //var ambientLight = new THREE.AmbientLight( 0xcccccc );
                 var ambientLight = new THREE.AmbientLight( 0xffffff );
                 scene.add( ambientLight );
 
                 var pointLight = new THREE.PointLight( 0xff4400, 5, 30 );
                 pointLight.position.set( 5, 0, 0 );
-                //scene.add( pointLight );
+                scene.add( pointLight );
 
                 // renderer
 
