--- a/app/index.html
+++ b/app/index.html
@@ -58,23 +58,34 @@
                 //scene.fog = new THREE.FogExp2( 0x000000, 0.035 );
 
                 var loader = new THREE.JSONLoader();
-                loader.load( 'models/cylinder.json', function ( geometry, materials ) {
-                   var mesh = new THREE.Mesh( geometry, materials );
+                loader.load( 'models/cylinder.json', function (geometry, materials ) {
+                    var mesh = new THREE.Mesh( geometry, materials );
                     mesh.position.set( 0, 0, 0 );
-                    var s = 1.5;
+                    var s = 2.5;
                     mesh.scale.set( s, s, s );
                     scene.add( mesh );
+                 });
 
-                } );
+                var objectLoader = new THREE.ObjectLoader();
+                objectLoader.load( 'models/light-demo.json', function (scense) {
+                    for (var i = 0; i < scense.children.length; i++) {
+                        child = scense.children[i];
+                        // either do an instanceof() too look for a class
+                        if (child instanceof THREE.PointLight) {
+                            scene.add(child);
+                        }
+                    }
+                 });
 
                 // lights
 
                 var ambientLight = new THREE.AmbientLight( 0xffffff );
-                scene.add( ambientLight );
+                scene.add(ambientLight);
 
                 var pointLight = new THREE.PointLight( 0xff4400, 5, 30 );
                 pointLight.position.set( 5, 0, 0 );
-                scene.add( pointLight );
+                // We don't muanlly add lights, we add lights from blender
+                //scene.add( pointLight );
 
                 // renderer
 
