--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 
         <script>
 
-            if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
+            if (!Detector.webgl) Detector.addGetWebGLMessage();
 
             var container, stats, clock, mixer;
             var camera, scene, renderer, objects;
@@ -49,25 +49,25 @@
 
             function init() {
 
-                container = document.getElementById( 'container' );
+                container = document.getElementById('container');
 
-                camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 1, 2000 );
-                camera.position.set( 2, 4, 5 );
+                camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 2000);
+                camera.position.set(2, 4, 5);
 
                 scene = new THREE.Scene();
                 //scene.fog = new THREE.FogExp2( 0x000000, 0.035 );
 
                 var loader = new THREE.JSONLoader();
-                loader.load( 'models/cylinder.json', function (geometry, materials ) {
-                    var mesh = new THREE.Mesh( geometry, materials );
-                    mesh.position.set( 0, 0, 0 );
+                loader.load('models/cylinder.json', function (geometry, materials) {
+                    var mesh = new THREE.Mesh(geometry, materials);
+                    mesh.position.set(0, 0, 0);
                     var s = 2.5;
-                    mesh.scale.set( s, s, s );
-                    scene.add( mesh );
+                    mesh.scale.set(s, s, s);
+                    scene.add(mesh);
                  });
 
                 var objectLoader = new THREE.ObjectLoader();
-                objectLoader.load( 'models/light-demo.json', function (scense) {
+                objectLoader.load('models/light-demo.json', function (scense) {
                     for (var i = 0; i < scense.children.length; i++) {
                         child = scense.children[i];
                         // either do an instanceof() too look for a class
@@ -79,38 +79,38 @@
 
                 // lights
 
-                var ambientLight = new THREE.AmbientLight( 0xffffff );
+                var ambientLight = new THREE.AmbientLight(0xffffff);
                 scene.add(ambientLight);
 
-                var pointLight = new THREE.PointLight( 0xff4400, 5, 30 );
-                pointLight.position.set( 5, 0, 0 );
                 // We don't muanlly add lights, we add lights from blender
+                //var pointLight = new THREE.PointLight( 0xff4400, 5, 30 );
+                //pointLight.position.set( 5, 0, 0 );
                 //scene.add( pointLight );
 
                 // renderer
 
-                renderer = new THREE.WebGLRenderer({ antialias: true });
-                renderer.setClearColor( 0xc6c6c6, 1);
-                renderer.setPixelRatio( window.devicePixelRatio );
-                renderer.setSize( window.innerWidth, window.innerHeight );
-                container.appendChild( renderer.domElement );
+                renderer = new THREE.WebGLRenderer({antialias: true});
+                renderer.setClearColor(0xc6c6c6, 1);
+                renderer.setPixelRatio(window.devicePixelRatio);
+                renderer.setSize(window.innerWidth, window.innerHeight);
+                container.appendChild(renderer.domElement);
 
                 // stats
 
                 stats = new Stats();
-                container.appendChild( stats.dom );
+                container.appendChild(stats.dom);
 
                 // events
 
-                window.addEventListener( 'resize', onWindowResize, false );
+                window.addEventListener('resize', onWindowResize, false);
 
             }
 
             //
 
-            function onWindowResize( event ) {
+            function onWindowResize(event) {
 
-                renderer.setSize( window.innerWidth, window.innerHeight );
+                renderer.setSize(window.innerWidth, window.innerHeight);
 
                 camera.aspect = window.innerWidth / window.innerHeight;
                 camera.updateProjectionMatrix();
@@ -118,14 +118,14 @@
             }
 
             function animate() {
-                requestAnimationFrame( animate );
+                requestAnimationFrame(animate);
                 render();
                 stats.update();
             }
 
             function render() {
                 camera.lookAt(scene.position);
-                renderer.render( scene, camera );
+                renderer.render(scene, camera);
 
             }
 
